--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -14,6 +14,14 @@
 	address = {New York, NY, USA},
 } 
 
+@inproceedings{Hartl2019,
+  title={{SDOstream}: Low-Density Models for Streaming Outlier Detection},
+  author={Alexander Hartl and F{\'e}lix Iglesias and Tanja Zseby},
+  booktitle={ESANN 2020 proceedings},
+  pages={661--666},
+  year={2020}
+}
+
 @inproceedings{Angiulli2007,
 	author = {Angiulli, Fabrizio and Fassetti, Fabio},
 	title = {Detecting Distance-based Outliers in Streams of Data},
